# AlliedEngineer_Automation

./: db.sqlite3
Frontend_React/: .gitignore  index.html  package-lock.json  package.json
Frontend_React/src/: App.css  App.jsx  api.js  index.css
Frontend_React/src/Components/: AnalysisSelector.jsx  DownloadButton.jsx  FileUploader.jsx  Header.css  Header.jsx  ThresholdInputs.jsx
backend_project/: Procfile  apt.txt  manage.py  pyproject.toml  requirements.txt  settings.py  urls.py
backend_project/backend_project/: settings.py
backend_project/processor/: apps.py  pipelines.py  serializers.py  urls.py  utils.py  views.py
backend_project/static/: .gitkeep
