[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-project"
version = "1.0.0"
description = "Django backend for Allied Engineer Automation"
requires-python = ">=3.10"
dependencies = [
    "Django==4.2.7",
    "djangorestframework==3.14.0",
    "django-cors-headers==4.3.1",
    "pandas==2.0.3",
    "numpy==1.24.3",
    "openpyxl==3.1.2",
    "gunicorn==21.2.0",
    "setuptools>=65.0.0",
    "wheel>=0.38.0",
]
