[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-project"
version = "1.0.0"
description = "Django backend for Allied Engineer Automation"
requires-python = ">=3.10,<3.12"
dependencies = [
    "Django==4.2.7",
    "djangorestframework==3.14.0",
    "django-cors-headers==4.3.1",
    "openpyxl==3.1.2",
    "gunicorn==21.2.0",
    "pandas==2.2.2",
    "numpy==1.26.4",
]
